err/django-restlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_restlib-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restlib'...
Listing './lib/python3.5/site-packages/restlib/conf'...
Listing './lib/python3.5/site-packages/restlib/representations'...
Compiling './lib/python3.5/site-packages/restlib/representations/__init__.py'...
***   File "./lib/python3.5/site-packages/restlib/representations/__init__.py", line 24
    raise KeyError, 'Encoder for %s not registered' % mimetype
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restlib/resources'...
Compiling './lib/python3.5/site-packages/restlib/resources/base.py'...
***   File "./lib/python3.5/site-packages/restlib/resources/base.py", line 62
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restlib/resources/middleware'...
Compiling './lib/python3.5/site-packages/restlib/resources/model.py'...
***   File "./lib/python3.5/site-packages/restlib/resources/model.py", line 35
    raise ImportError, '%s not found' % model
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restlib/resources/utils'...
Compiling './lib/python3.5/site-packages/restlib/resources/utils/resolve.py'...
***   File "./lib/python3.5/site-packages/restlib/resources/utils/resolve.py", line 118
    raise AttributeError, 'The "%s" attribute could not be found '\
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restlib/templates'...
Listing './lib/python3.5/site-packages/restlib/templates/restlib'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
